# star-helix-server

./: Procfile  README.md  gconfig.py  manage.py  pyproject.toml  requirements.txt
shelix/: asgi.py  urls.py  wsgi.py
shelix/settings/: base.py  development.py  env.py  production.py  storage.py
shelix/stash/: admin.py  apps.py  models.py  queue.py  tasks.py  urls.py  views.py  websocket.py
shelix/stash/migrations/: 0001_initial.py  0002_alter_log_end_ts_alter_log_start_ts.py  0003_alter_log_logfile.py  0004_log_process.py  0005_remove_log_logfile_logchunk.py  0006_remove_log_process.py  0007_loggingtoken.py
shelix/ui/: views.py
