[project]
name = "star-helix-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Bailey", email = "paul.bailey@cognitivespace.com"},
]
dependencies = [
    "django",
    "dj-database-url",
    "psycopg2-binary",
    "haikunator",
    "redis>=4.0.2",
    "hiredis>=2.0.0",
    "huey>=2.4.2",
    "django-storages>=1.12.3",
    "boto3>=1.20.26",
    "gunicorn>=20.1.0",
    "uvicorn>=0.16.0",
    "websockets>=10.1",
    "whitenoise>=5.3.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
migrate = "python manage.py migrate"
manage = "python manage.py"
guni = "gunicorn shelix.asgi:application -k uvicorn.workers.UvicornWorker -c gconfig.py"
